html/skins/local/screen.css
html { background-color:#999999; text-align:center; padding:0; }
body {
	width:980px; position:relative; margin:0 auto; padding:0;
	text-align:left; background-color:white; border:1px solid grey;
	font-family:Arial, Helvetica, sans-serif;
}

fieldset { margin:4px 0; }
legend {}
label { font-weight:normal; color:#666666; text-align:right; }
label.required { color:#333333; }
.required { color:#333333; }

table { border-collapse:separate; margin:3px 0 8px 0; overflow:auto; border:none; }
td label {float:right; font-weight:normal; color:#666666; vertical-align:top;}
td input {  }
td { vertical-align:top; height:8pt; padding:4px; }
th { height:8pt; padding:4px; }
thead th { font-weight:normal; color:#666666; text-align:left; vertical-align:bottom; }
tbody th { font-weight:normal; color:#666666; text-align:right; vertical-align:top; }
th a:link,th a:visited { color:#3366cc; background-color:inherit; }

form table { border:none; }

ul.pageNavigation li { margin-right:2px; }


/* Side Panels */
#panel-container { overflow:auto; }
#content-panel { padding-top:2px; }
#panel-one { padding-top:5px; }
/* Footer */
#footer h1 { float:left; font-size: 16px; color: #666666; }

/* Breadcrumbs */
.breadcrumbs ul { list-style-type:none; padding-bottom:5px; }
.breadcrumbs li {
	display:inline; font-size:14pt; padding-right:.75em;
	background:url('/skins/origin/images/breadcrumb.png') center right no-repeat;
}

.interfaceBox { border-top:1px solid grey; padding:.5em; }

textarea { width:300px; }

#banner .loginForm { position:absolute; top:5px; right:5px; color:white; }
#banner .loginForm h1 { display:none; }
#banner .loginForm th label { color:white; }
#banner .loginForm fieldset { border:none; margin:0; padding:0; }
#banner .loginForm legend { display:none; }
#banner .loginForm button {display:inline; }
#banner .loginForm a { font-weight:bold; color:blue; }

.addressList,.subunitList { height:300px; overflow:auto; }
.current { border:2px solid #00aa00; background-color:lemonchiffon; }
.retired { border:2px solid #333333; background-color:lightgrey; }
.missing { border:2px solid #aa0000; background-color:salmon; }

/* YUI Auto-complete */
.yui-skin-sam .yui-ac { font-size:100%; margin-bottom:1em; }
.yui-skin-sam .yui-ac-content li { color:black; background-color:white; }

/* YUI Overlay popups */
.yui-skin-sam .yui-overlay { color:black; background-color:#737373; padding:10px; }
.yui-skin-sam .yui-overlay .hd { font-size:12pt; font-weight:bold; }
.yui-skin-sam .yui-overlay .bd { min-height:30px; }
.yui-skin-sam .yui-overlay ul { margin:0; padding:0; }
.yui-skin-sam .yui-overlay li { list-style-type:none; }

